# hoop-higher

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  README.md  SPEC.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: publish.yml  quality-gate.yml
docs/adr/: 0001-initial-scoring-economy.md  0002-round-difficulty-ramp.md  0003-layer-boundaries-for-gameplay.md  0004-local-persistence-boundary.md  0005-historical-mode-uses-one-source-date.md
docs/agents/: domain.md
docs/design/stat-desk/: PLAN.md  RESOURCES.md
docs/design/theme-toggle/: RESOURCES.md
docs/research/: open-issue-audit-2026-07-20.md
src/hoophigher/: __init__.py  app.py  config.py  main.py  paths.py
tests/: test_config_and_app_provider_selection.py  test_config_and_app_stats_source_selection.py  test_data_historical_index_repository.py  test_data_mock_stats_source.py  test_data_nba_api_parsing.py  test_data_nba_api_provider.py  test_data_nba_api_stats_source.py  test_data_persistence.py  test_domain_difficulty.py  test_domain_formatting.py  test_domain_models.py  test_domain_scoring.py  test_mock_provider.py  test_round_generator.py  test_services_gameplay.py  test_services_historical_date_service.py  test_services_leaderboard.py  test_services_nba_game_resolution.py  test_services_run_history.py  test_services_stats.py  test_smoke.py  test_tui_chrome.py  test_tui_game_over.py  test_tui_navigation.py  test_tui_responsive.py  test_tui_snapshots.py  test_tui_theme.py
(+80 files in other folders)
