[project]
name = "hoophigher"
version = "0.1.0"
description = "Terminal higher-or-lower NBA game scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.38",
    "textual>=8.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
hoophigher = "hoophigher.main:main"
